File::Slurp::Unicode (0.7.0)

  * First release to CPAN

 -- David Caldwell <david@porkrind.org>  Sat, 10 Apr 2010 16:34:35 -0700
