@@ -1,6 +1,6 @@
 ---
 name: File-Slurp-Unicode
-version: 0.7.0
+version: 0.7.1
 author:
   - 'David Caldwell <david@porkrind.org>'
 abstract: Reading/Writing of Complete Files with Character Encoding Support
@@ -8,11 +8,12 @@ license: perl
 resources:
   license: http://dev.perl.org/licenses/
 requires:
+  File::Slurp: 0
   perl: 5.10.0
 provides:
   File::Slurp::Unicode:
     file: lib/File/Slurp/Unicode.pm
-    version: 0.7.0
+    version: 0.7.1
 generated_by: Module::Build version 0.280801
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
